--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.anuj.week1"
+        applicationId "com.codepath.week1"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
